Added run configurations and profile specific property files
