# campaign-service-api/src/main/resources/openapi.yaml
@@ -25,8 +25,33 @@ paths:
           description: Request validation error
         '500':
           description: Server error
+    post:
+      summary: Create campaigns
+      operationId: createCampaign
+      tags:
+        - campaign
+      parameters:
+        - name: X-User-Id
+          in: header
+          required: true
+          description: Id of user provided by the gateway
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateCampaignRequest'
+      responses:
+        '201':
+          description: Campaign is created
+        '400':
+          description: Request validation error
+        '500':
+          description: Server error
 
-  /api/v1/campaigns/campaign:
+  /api/v1/campaigns/{id}:
     get:
       summary: Get a campaign
       operationId: getCampaign
@@ -34,10 +59,10 @@ paths:
         - campaign
       parameters:
         - name: id
-          in: query
+          in: path
           required: true
           schema:
-            type: string
+            type: integer
       responses:
         '200':
           description: A campaign
@@ -49,6 +74,134 @@ paths:
           description: Request validation error
         '500':
           description: Server error
+    delete:
+      summary: Delete a campaign by ID
+      operationId: deleteCampaign
+      tags:
+        - campaign
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Id of campaign
+          schema:
+            type: integer
+        - name: X-User-Id
+          in: header
+          required: true
+          description: Id of user provided by the gateway
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Campaign deleted successfully
+        '404':
+          description: Campaign not found
+        '500':
+          description: Server error
+
+  /api/v1/campaigns/user:
+    get:
+      summary: Get all campaigns for user
+      operationId: getAllCampaignsForUser
+      tags:
+        - campaign
+      parameters:
+        - name: X-User-Id
+          in: header
+          required: true
+          description: Id of user provided by the gateway
+          schema:
+            type: string
+      responses:
+        '200':
+          description: All the campaigns for user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetAllCampaignsForUserResponse'
+        '400':
+          description: Request validation error
+        '500':
+          description: Server error
+
+  /api/v1/campaigns/pitches:
+    post:
+      summary: Create pitch
+      operationId: createPitch
+      tags:
+        - pitch
+      parameters:
+        - name: X-User-Id
+          in: header
+          required: true
+          description: Id of user provided by the gateway
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreatePitchRequest'
+      responses:
+        '201':
+          description: Pitch is created
+        '400':
+          description: Request validation error
+        '500':
+          description: Server error
+
+  /api/v1/campaigns/pitches/user:
+    get:
+      summary: Get pitches for user
+      operationId: getPitchesForUser
+      tags:
+        - pitch
+      parameters:
+        - name: X-User-Id
+          in: header
+          required: true
+          description: Id of user provided by the gateway
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of pitches for user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetPitchesForUserResponse'
+        '400':
+          description: Request validation error
+        '500':
+          description: Server error
+
+  /api/v1/campaigns/pitches/{id}:
+    delete:
+      summary: Delete pitch by id
+      operationId: deletePitch
+      tags:
+        - pitch
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+        - name: X-User-Id
+          in: header
+          required: true
+          description: Id of user provided by the gateway
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Pitch deleted successfully
+        '404':
+          description: Pitch not found
+        '500':
+          description: Server error
 
 components:
   schemas:
@@ -58,8 +211,11 @@ components:
         - id
         - ownerId
         - title
+        - campaignId
       properties:
         id:
+          type: integer
+        campaignId:
           type: integer
         ownerId:
           type: string
@@ -106,6 +262,16 @@ components:
           items:
             $ref: '#/components/schemas/Campaign'
 
+    GetAllCampaignsForUserResponse:
+      type: object
+      required:
+        - campaignList
+      properties:
+        campaignList:
+          type: array
+          items:
+            $ref: '#/components/schemas/Campaign'
+
     GetCampaignResponse:
       type: object
       required:
@@ -114,3 +280,45 @@ components:
         campaign:
           $ref: '#/components/schemas/Campaign'
 
+    CreatePitchRequest:
+      type: object
+      required:
+        - campaignId
+        - title
+      properties:
+        title:
+          type: string
+        campaignId:
+          type: integer
+        text:
+          type: string
+    CreateCampaignRequest:
+      type: object
+      required:
+        - ownerId
+        - title
+        - campaignType
+      properties:
+        ownerId:
+          type: string
+        title:
+          type: string
+        description:
+          type: string
+        contentGuideline:
+          type: string
+        campaignType:
+          type: string
+          enum: [ PRODUCT-FOR-POST, PAID-POST, AFFILIATE ]
+        fee:
+          type: integer
+
+    GetPitchesForUserResponse:
+      type: object
+      required:
+        - pitchList
+      properties:
+        pitchList:
+          type: array
+          items:
+            $ref: '#/components/schemas/Pitch'
