# campaign-service/src/main/java/mrtn/influ/campaign/dto/CampaignDto.java
@@ -1,14 +1,0 @@
-package mrtn.influ.campaign.dto;
-
-import java.util.List;
-
-public record CampaignDto (
-    Long id,
-    String userId,
-    String title,
-    String description,
-    Integer maxFee,
-    Integer minFee,
-    Boolean favorited,
-    List<PitchDto> pitches
-){}
