# campaign-service/src/main/java/mrtn/influ/campaign/dto/CreatePitchRequest.java
@@ -1,32 +1,0 @@
-package mrtn.influ.campaign.dto;
-
-public class CreatePitchRequest {
-    private Long campaignId;
-    private String title;
-    private String text;
-
-    public Long getCampaignId() {
-        return campaignId;
-    }
-
-    public void setCampaignId(Long campaignId) {
-        this.campaignId = campaignId;
-    }
-
-    public String getTitle() {
-        return title;
-    }
-
-    public void setTitle(String title) {
-        this.title = title;
-    }
-
-    public String getText() {
-        return text;
-    }
-
-    public void setText(String text) {
-        this.text = text;
-    }
-
-}
